--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,13 @@
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://172.23.0.2:5432/dbname
-spring.datasource.username=rootuser
-spring.datasource.password=changeme
+spring.datasource.url=jdbc:postgresql://172.23.0.4:5432/assessmentcore
+spring.datasource.username=root
+spring.datasource.password=1234
 
 # JPA/Hibernate Configuration
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 
 # Actuator Configuration
 management.endpoint.health.show-details=always
