OTAT-462: Edit entities and models and add liquibase

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://172.23.0.4:5432/assessmentcore
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://172.23.0.4:5432/assessment-core
+spring.datasource.username=rootuser
+spring.datasource.password=changeme
 
 # JPA/Hibernate Configuration
 spring.jpa.database=POSTGRESQL
@@ -11,3 +11,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 # Actuator Configuration
 management.endpoint.health.show-details=always
+
+# Liquibase
+spring.liquibase.change-log=classpath:liquibase/master.xml
+spring.liquibase.database-change-log-lock-table=ASSESSMENT_CORE_CHANGE_LOG_LOCK
+spring.liquibase.database-change-log-table=ASSESSMENT_CORE_CHANGE_LOG
