OTAT-462: Fix ci-cd file

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: rootuser
+          POSTGRES_PASSWORD: changeme
+          POSTGRES_DB: assessment-core
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -23,4 +34,7 @@ jobs:
           distribution: adopt
 
       - name: Build and test
-        run: mvn clean test
+        env:
+          DATABASE_URL: postgres://rootuser:changeme@localhost:5432/assessment-core
+        run: |
+          mvn clean test
