OTAT-462: Fix ci-cd file

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
           distribution: adopt
 
       - name: Build and test
-        env:
-          DATABASE_URL: postgres://rootuser:changeme@localhost:5432/assessment-core
+#        env:
+#          DATABASE_URL: postgres://rootuser:changeme@localhost:5432/assessment-core
         run: |
           mvn clean test
