--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches:
       - '*'
+env:
+  POSTGRES_USER: rootuser
+  POSTGRES_PASSWORD: changeme
+  POSTGRES_DB: assessment-core
 
 jobs:
   build:
@@ -15,25 +19,25 @@ jobs:
     services:
       postgres:
         image: postgres
-        env:
-          POSTGRES_USER: rootuser
-          POSTGRES_PASSWORD: changeme
-          POSTGRES_DB: assessment-core
         ports:
           - 5432:5432
+  steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        java-version: 17
+        distribution: adopt
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: adopt
+    - name: Set up PostgreSQL
+      run: |
+        sudo apt-get install postgresql-client
+        psql -h localhost -U ${{ env.POSTGRES_USER }} -d ${{ env.POSTGRES_DB }} -c "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";"
 
-      - name: Build and test
-#        env:
-#          DATABASE_URL: postgres://rootuser:changeme@localhost:5432/assessment-core
-        run: |
-          mvn clean test
+    - name: Build with Maven
+      run: mvn clean package
+
+    - name: Run Tests
+      run: mvn test
