OTAT-462: Fix ci-cd file

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,10 +38,10 @@ jobs:
           java-version: 17
           distribution: adopt
 
-      - name: Set up PostgreSQL
-        run: |
-          sudo apt-get install postgresql-client
-          psql -h postgres -U ${{ env.POSTGRES_USER }} -d ${{ env.POSTGRES_DB }} -c "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";"
+#      - name: Set up PostgreSQL
+#        run: |
+#          sudo apt-get install postgresql-client
+#          psql -h postgres -U ${{ env.POSTGRES_USER }} -d ${{ env.POSTGRES_DB }} -c "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";"
 
       - name: Build with Maven
         run: mvn clean package
