OTAT-468:feature:Change jakarta.validation-api dependency to spring-boot-starter-validation

--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,8 @@
 			<artifactId>liquibase-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 
