OTAT-468: Fix application test startup

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,13 @@
-spring.profiles.active=dev
 server.port=8098
-server.servlet.context-path=/assessment-core/rest/
+server.servlet.context-path=/assessment-core/api/
+
+# Database
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Liquibase
+spring.liquibase.change-log=classpath:liquibase/master.xml
+spring.liquibase.database-change-log-lock-table=ASSESSMENT_CORE_CHANGE_LOG_LOCK
+spring.liquibase.database-change-log-table=ASSESSMENT_CORE_CHANGE_LOG
