OTAT-468: Minor changes in props

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,15 @@
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://172.23.0.4:5432/assessment-core
-spring.datasource.username=rootuser
-spring.datasource.password=changeme
-# JPA/Hibernate Configuration
+server.port=8098
+
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=assessment-core
+spring.datasource.username=flickit
+spring.datasource.password=flickit
+
+# JPA/Hibernate
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
-# Actuator Configuration
+
+# Actuator
 management.endpoint.health.show-details=always
-# Liquibase
-spring.liquibase.change-log=classpath:liquibase/master.xml
-spring.liquibase.database-change-log-lock-table=ASSESSMENT_CORE_CHANGE_LOG_LOCK
-spring.liquibase.database-change-log-table=ASSESSMENT_CORE_CHANGE_LOG
