OTAT-464: Fix tests and clean up services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.profiles.active=dev
 server.servlet.context-path=/assessment-core/api/
 
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=assessment-core
+spring.datasource.username=flickit
+spring.datasource.password=flickit
+
 # Liquibase
 spring.liquibase.change-log=classpath:liquibase/master.xml
 spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
