--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,12 +8,12 @@ on:
     branches:
       - '*'
 env:
-  POSTGRES_USER: rootuser
-  POSTGRES_PASSWORD: changeme
-  POSTGRES_DB: assessment-core
-  SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/assessment-core
-  SPRING_DATASOURCE_USERNAME: rootuser
-  SPRING_DATASOURCE_PASSWORD: changeme
+  POSTGRES_USER: flickit
+  POSTGRES_PASSWORD: flickit
+  POSTGRES_DB: flickit
+  SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/flickit?currentSchema=assessment-core
+  SPRING_DATASOURCE_USERNAME: flickit
+  SPRING_DATASOURCE_PASSWORD: flickit
 
 jobs:
   build:
