OTAT-464: update .properties file

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,17 @@
 server.port=8098
 server.servlet.context-path=/assessment-core/api/
 
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=assessment-core
+spring.datasource.username=flickit
+spring.datasource.password=flickit
+
+# JPA/Hibernate
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+
 # Liquibase
 spring.liquibase.change-log=classpath:liquibase/master.xml
 spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
