--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,7 @@ spring.datasource.password=flickit
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 
 # Actuator
 management.endpoint.health.show-details=always
