--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
 # Liquibase
-spring.liquibase.change-log=classpath:liquibase/master.xml
-spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
-spring.liquibase.database-change-log-table=assessment_core_change_log
+#spring.liquibase.change-log=classpath:liquibase/master.xml
+#spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
+#spring.liquibase.database-change-log-table=assessment_core_change_log
