--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,15 @@
 server.port=8098
 
 # Database
-spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/flickit?currentSchema=assessment-core
+spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/flickit
+#spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/flickit?currentSchema=assessment-core
 spring.datasource.username=flickit
 spring.datasource.password=flickit
 
 # JPA/Hibernate
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=assessment-core
 
