--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.default_schema=assessment-core
+#spring.jpa.properties.hibernate.default_schema=assessment-core
 
 # Actuator
 management.endpoint.health.show-details=always
