OTAT-464: fix pipeline

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,6 +11,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.default_schema=public
 
 # Liquibase
 #spring.liquibase.change-log=classpath:liquibase/master.xml
