--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8098
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=assessment-core
+spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/flickit
 spring.datasource.username=flickit
 spring.datasource.password=flickit
 
@@ -10,6 +10,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.default_schema=public
 
 # Actuator
 management.endpoint.health.show-details=always
