OTAT-553: Add create evidence to question service Tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,6 +2,6 @@ server.port=8098
 server.servlet.context-path=/assessment-core/api/
 
 # Liquibase
-spring.liquibase.change-log=classpath:liquibase/master.xml
-spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
-spring.liquibase.database-change-log-table=assessment_core_change_log
+#spring.liquibase.change-log=classpath:liquibase/master.xml
+#spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
+#spring.liquibase.database-change-log-table=assessment_core_change_log
