--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8098
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=assessment-core
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit
 spring.datasource.username=flickit
 spring.datasource.password=flickit
 
