OTAT-533:feature:Create liquibase changesets

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,9 @@ spring.datasource.password=flickit
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+
+# Liquibase
+spring.liquibase.liquibase-schema=assessment-core
 
 # Actuator
 management.endpoint.health.show-details=always
