--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.servlet.context-path=/assessment-core/api/
 spring.liquibase.change-log=classpath:liquibase/master.xml
 spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
 spring.liquibase.database-change-log-table=assessment_core_change_log
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=none
