--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,7 +2,7 @@ server.port=8098
 server.servlet.context-path=/assessment-core/api/
 
 # Database
-spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/flickit
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit
 spring.datasource.username=flickit
 spring.datasource.password=flickit
 
