--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,12 @@
 server.port=8098
 server.servlet.context-path=/assessment-core/api/
 
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit
+spring.datasource.username=flickit
+spring.datasource.password=flickit
+
 # Liquibase
-#spring.liquibase.change-log=classpath:liquibase/master.xml
-#spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
-#spring.liquibase.database-change-log-table=assessment_core_change_log
+spring.liquibase.change-log=classpath:liquibase/master.xml
+spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
+spring.liquibase.database-change-log-table=assessment_core_change_log
