--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 server.servlet.context-path=/assessment-core/api/
 
 # Liquibase
-spring.liquibase.change-log=classpath:liquibase/master.xml
+spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
 spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
 spring.liquibase.database-change-log-table=assessment_core_change_log
 
