--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ server.servlet.context-path=/assessment-core/api/
 
 # Liquibase
 spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
-spring.liquibase.database-change-log-lock-table=assessment_core_change_log_lock
-spring.liquibase.database-change-log-table=assessment_core_change_log
+spring.liquibase.database-change-log-lock-table=fac_changelog_lock
+spring.liquibase.database-change-log-table=fac_changelog
 
 # JPA/Hibernate
+spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
