--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,17 @@
 server.port=8098
 server.servlet.context-path=/assessment-core/api/
 
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=flickit_test
+spring.datasource.username=flickit_test
+spring.datasource.password=flickit_test
+
 # Liquibase
-spring.liquibase.liquibase-schema=public
+spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
+spring.liquibase.database-change-log-lock-table=fac_changelog_lock
+spring.liquibase.database-change-log-table=fac_changelog
+
+# JPA/Hibernate
+spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
