--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<name>flickit-assessment-core</name>
 	<properties>
 		<java.version>17</java.version>
+		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -73,6 +74,25 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<container>
+						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+						<jvmFlags>
+							<jvmFlag>-Dserver.port=8098</jvmFlag>
+						</jvmFlags>
+						<ports>
+							<port>8098</port>
+						</ports>
+					</container>
+					<from>
+						<image>ghcr.io/avansoft/jdk:17.0.7</image>
+					</from>
 				</configuration>
 			</plugin>
 		</plugins>
