--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,6 @@ spring.datasource.password=flickit
 
 # Actuator
 management.endpoint.health.show-details=always
+
+flickit-platform.host=https://app-flickit.darkube.app
+flickit-platform.jwt.access-token=
