OTAT-521:feature:Add flickit-platform properties to tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,9 +2,9 @@ server.port=8098
 server.servlet.context-path=/assessment-core/api/
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=flickit_test
-spring.datasource.username=flickit_test
-spring.datasource.password=flickit_test
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit
+spring.datasource.username=flickit
+spring.datasource.password=flickit
 
 # Liquibase
 spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
@@ -15,3 +15,6 @@ spring.liquibase.database-change-log-table=fac_changelog
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+
+flickit-platform.host=https://app-flickit.darkube.app
+flickit-platform.jwt.access-token=
