--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,9 +2,9 @@ server.port=8098
 server.servlet.context-path=/assessment-core/api/
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/flickit
-spring.datasource.username=flickit
-spring.datasource.password=flickit
+spring.datasource.url=jdbc:postgresql://localhost:5432/flickit?currentSchema=flickit_test
+spring.datasource.username=flickit_test
+spring.datasource.password=flickit_test
 
 # Liquibase
 spring.liquibase.change-log=classpath:liquibase/changelog-master.xml
