OTAT-464: Add necessities for connection to django services

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,5 @@ spring.datasource.password=flickit
 
 # Actuator
 management.endpoint.health.show-details=always
+
+flickit-platform.host=https://app-flickit.darkube.app
