--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -15,3 +15,5 @@ spring.liquibase.database-change-log-table=fac_changelog
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+
+flickit-platform.host=https://app-flickit.darkube.app
