--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,4 +8,4 @@ spring.datasource.password=flickit
 # Actuator
 management.endpoint.health.show-details=always
 
-flickit-platform.host=https://app-flickit.darkube.app
+app.flickit-platform.rest.base-url=https://app-flickit.darkube.app
