--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,4 +16,4 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 
-flickit-platform.host=https://app-flickit.darkube.app
+app.flickit-platform.rest.base-url=https://app-flickit.darkube.app
