--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.flickit</groupId>
 	<artifactId>flickit-assessment-core</artifactId>
-	<version>0.1.2</version>
+	<version>0.1.3</version>
 	<name>flickit-assessment-core</name>
 	<properties>
 		<java.version>17</java.version>
@@ -88,6 +88,11 @@
 						<ports>
 							<port>8098</port>
 						</ports>
+						<labels>
+							<org.opencontainers.image.source>
+								https://github.com/avansoft/flickit-assessment-core
+							</org.opencontainers.image.source>
+						</labels>
 					</container>
 					<from>
 						<image>ghcr.io/avansoft/flickit-assessment-core/jdk:17.0.7</image>
