--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,18 +3,17 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - '*'
+      - 'main'
   pull_request:
     branches:
       - '*'
 env:
-  POSTGRES_USER: flickit
-  POSTGRES_PASSWORD: flickit
-  POSTGRES_DB: flickit
-  DEFAULT_SCHEMA_NAME: assessment-core
-  SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/flickit?currentSchema=assessment-core
-  SPRING_DATASOURCE_USERNAME: flickit
-  SPRING_DATASOURCE_PASSWORD: flickit
+  POSTGRES_USER: rootuser
+  POSTGRES_PASSWORD: changeme
+  POSTGRES_DB: assessment-core
+  SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/assessment-core
+  SPRING_DATASOURCE_USERNAME: rootuser
+  SPRING_DATASOURCE_PASSWORD: changeme
 
 jobs:
   build:
