--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - 'main'
+    tags:
+      - 'v**'
   pull_request:
     branches:
       - '*'
@@ -15,10 +17,16 @@ env:
   SPRING_DATASOURCE_USERNAME: rootuser
   SPRING_DATASOURCE_PASSWORD: changeme
   SONAR_PROJECT_KEY: flickit-assessment-core
+  REGISTRY: ghcr.io
+  IMAGE_NAME: avansoft/flickit-assessment-core
+  JIB_OPT: -Djib.httpTimeout=240000 -Dmaven.test.skip=true
+  JIB_CMD: clean install jib:build
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
 
     services:
       postgres:
@@ -46,6 +54,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
 
     services:
       postgres:
@@ -80,6 +90,8 @@ jobs:
 
   sonar:
     runs-on: ubuntu-latest
+    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
 
     services:
       postgres:
@@ -114,3 +126,48 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
+
+  build-and-push-image:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
+
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        id: vars
+
+      - name: Set output
+        run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+
+      - name: login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: avansoft
+          password: ${{ secrets.GH_PACKAGES_TOKEN }}
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: adopt
+
+      - name: Extract Maven project version
+        run: echo ::set-output name=version::$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+        id: project
+
+      - name: Check output
+        env:
+          RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ steps.vars.outputs.tag }}
+
+      - name: Build and push image
+        if: v${{ steps.project.outputs.version }} == ${{ steps.vars.outputs.tag }}
+        run: mvn ${{ env.JIB_OPT }} -Djib.to.image="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.project.outputs.version }}" ${{ env.JIB_CMD }}
