--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,6 +53,7 @@ jobs:
         run: mvn clean package
 
   test:
+    needs: [build]
     runs-on: ubuntu-latest
     if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
@@ -89,6 +90,7 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
   sonar:
+    needs: [test]
     runs-on: ubuntu-latest
     if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
