--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,8 +25,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
 
     services:
       postgres:
@@ -55,8 +53,6 @@ jobs:
   test:
     needs: [build]
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
 
     services:
       postgres:
@@ -92,8 +88,6 @@ jobs:
   sonar:
     needs: [test]
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      (github.event_name == 'pull_request' && github.ref_type == 'branch') }}
 
     services:
       postgres:
@@ -180,6 +174,7 @@ jobs:
           DARKUBE_APP_ID: ${{ secrets.ASSESSMENT_CORE_APP_ID_STAGING }}
 
   build-and-push-image:
+    needs: [sonar]
     name: deploy image
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
