--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -162,6 +162,7 @@ jobs:
 
   darkube-deploy-latest:
     needs: [build-and-push-latest-image]
+    name: darkube deploy latest
     container: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
     runs-on: ubuntu-latest
     if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
@@ -224,6 +225,7 @@ jobs:
 
   darkube-deploy:
     needs: [build-and-push-image]
+    name: darkube deploy
     container: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
