--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,7 +48,7 @@ jobs:
           distribution: adopt
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean compile
 
   test:
     needs: [build]
