--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.flickit</groupId>
 	<artifactId>flickit-assessment-core</artifactId>
-	<version>0.3.0</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<name>flickit-assessment-core</name>
 	<properties>
 		<sonar.organization>avansoft</sonar.organization>
