--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 		</dependency>
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit</artifactId>
+            <version>1.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit-junit5</artifactId>
             <version>1.1.0</version>
             <scope>test</scope>
