--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>${jib-maven-plugin.version}</version>
 				<configuration>
+					<skip>true</skip>
 					<container>
 						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
 						<labels>
