Revert "FAC-92 Push & Deploy latest when 'pushing to FAC-92-test' branch"
This reverts commit e0759eedf8e33cd554f20efe98cc5751d2e317f0.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -118,7 +118,7 @@ jobs:
     needs: [sonar]
     name: deploy latest image
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'push' && github.ref == 'refs/heads/FAC-92-test') ||
+    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
 
     permissions:
@@ -154,7 +154,7 @@ jobs:
     name: darkube deploy latest
     container: hamravesh.hamdocker.ir/public/darkube-cli:v1.1
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'push' && github.ref == 'refs/heads/FAC-92-test') ||
+    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
     steps:
       - name: Run script
