--- a/flickit-assessment-common/pom.xml
+++ b/flickit-assessment-common/pom.xml
@@ -9,17 +9,12 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>flickit-assessment-kit</artifactId>
+    <artifactId>flickit-assessment-common</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.flickit</groupId>
-            <artifactId>flickit-assessment-data</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.flickit</groupId>
-            <artifactId>flickit-assessment-common</artifactId>
-        </dependency>
-    </dependencies>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
