FAC-149:feature:Add AuthTokenFilter

--- a/flickit-assessment-server/src/main/resources/application.properties
+++ b/flickit-assessment-server/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.liquibase.database-change-log-table=fac_changelog
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+
+app.keycloak.jwt-secret=93435dfe-7b91-42c9-8b84-fa83074b27d6
