FAC-179: Fix zip bomb attack

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
             <artifactId>minio</artifactId>
             <version>${minio.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 	<build>
