FAC-181: Primary sentry settings

--- a/flickit-assessment-server/src/main/resources/application.properties
+++ b/flickit-assessment-server/src/main/resources/application.properties
@@ -10,3 +10,13 @@ spring.liquibase.database-change-log-table=fac_changelog
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+
+sentry.dsn=https://5105a408b0cc694ea03d6466ad70c72c@o4506488920932352.ingest.sentry.io/4506488925192192
+# Set traces-sample-rate to 1.0 to capture 100% of transactions for performance monitoring.
+# We recommend adjusting this value in production.
+sentry.traces-sample-rate=1.0
+sentry.debug=true
+
+sentry.logging.enabled=true
+sentry.logging.minimum-event-level=info
+sentry.logging.minimum-breadcrumb-level=debug
