--- a/flickit-assessment-core/pom.xml
+++ b/flickit-assessment-core/pom.xml
@@ -24,6 +24,12 @@
             <groupId>org.flickit</groupId>
             <artifactId>flickit-assessment-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry</artifactId>
+            <version>7.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
