--- a/flickit-assessment-server/pom.xml
+++ b/flickit-assessment-server/pom.xml
@@ -28,6 +28,18 @@
             <groupId>org.flickit</groupId>
             <artifactId>flickit-assessment-common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry-spring-boot-starter-jakarta</artifactId>
+            <version>${sentry.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry-logback</artifactId>
+            <version>${sentry.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -51,6 +63,38 @@
                     </container>
                 </configuration>
             </plugin>
+            <plugin>
+				<groupId>io.sentry</groupId>
+				<artifactId>sentry-maven-plugin</artifactId>
+				<version>${sentry-maven-plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<!-- for showing output of sentry-cli -->
+					<debugSentryCli>true</debugSentryCli>
+
+					<org>flickit</org>
+
+					<project>flickit-assessment</project>
+
+					<!-- in case you're self hosting, provide the URL here -->
+					<!--<url>http://localhost:8000/</url>-->
+
+					<!-- provide your auth token via SENTRY_AUTH_TOKEN environment variable -->
+					<authToken>${env.SENTRY_AUTH_TOKEN}</authToken>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<!--
+                            Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
+                            This enables source context, allowing you to see your source
+                            code as part of your stack traces in Sentry.
+                            -->
+							<goal>uploadSourceBundle</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
         </plugins>
     </build>
 
