FAC-205 Create 'flickit-advice-engine' module and update parent pom
Added a new module 'flickit-advice-engine' with its own pom.xml file. This included specifying project properties and dependencies related to the flickit-assessment-data and flickit-assessment-common archetypes. Updated the parent pom.xml file to include the new module.

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
 		<module>flickit-assessment-data</module>
 		<module>flickit-assessment-server</module>
 		<module>flickit-assessment-common</module>
-	</modules>
+        <module>flickit-advice-engine</module>
+    </modules>
 
 	<properties>
 		<revision>0.12.0-SNAPSHOT</revision>
