FAC-198: Move properties values to properties file

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -9,3 +9,15 @@ spring.datasource.password=flickit
 management.endpoint.health.show-details=always
 
 app.flickit-platform.rest.base-url=https://test.flickit.org/
+
+# minio
+app.minio.url=https://flickit-test-cdn.darkube.app:9000
+app.minio.port=9000
+app.minio.access-key=test
+app.minio.access-secret=test
+app.minio.bucket-name=media
+app.minio.object-name=assessment_kit/dsl
+app.minio.secure=true
+
+#dsl-parser
+app.dsl.parser.url=http://dsl:8080/extract/
