FAC-179: Change properties values to local values

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -11,13 +11,14 @@ management.endpoint.health.show-details=always
 app.flickit-platform.rest.base-url=https://test.flickit.org/
 
 # minio
-app.minio.url=https://flickit-test-cdn.darkube.app:9000
+app.minio.url=http://127.0.0.1:9000
 app.minio.port=9000
-app.minio.access-key=test
-app.minio.access-secret=test
-app.minio.bucket-name=media
-app.minio.object-name=assessment_kit/dsl
-app.minio.secure=true
+app.minio.access-key=minioadmin
+app.minio.access-secret=minioadmin
+app.minio.bucket-name=test
+app.minio.object-name=assessmentKit/dsl/
+app.minio.secure=false
 
-#dsl-parser
-app.dsl.parser.url=http://dsl:8080/extract/
+
+# dsl parser
+app.dsl.parser.url=http://localhost:8080/extract
