Change dsl-parser app config name

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -21,4 +21,4 @@ app.minio.secure=false
 
 
 # dsl parser
-app.dsl.parser.url=http://localhost:8080/extract
+app.dsl-parser.url=http://localhost:8080/extract
