Add app.minio.secure prop to application-dev.properties

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -18,6 +18,7 @@ app.minio.access-key=minioadmin
 app.minio.access-secret=minioadmin
 app.minio.bucket-name=test
 app.minio.object-name=assessmentKit/dsl/
+app.minio.secure=false
 
 # minio app
 #app.minio.url=http://flickit-test-cdn.darkube.app/
