FAC-229: Refactor minio config props

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -17,7 +17,9 @@ app.minio.port=9000
 app.minio.access-key=minioadmin
 app.minio.access-secret=minioadmin
 app.minio.bucket-name=test
-app.minio.object-name=assessmentKit/dsl/
+app.minio.dsl-bucket-name=dsl
+app.minio.avatar-bucket-name=avatar
+#app.minio.object-name=assessmentKit/dsl/
 app.minio.secure=false
 
 # minio app
