FAC-209: Email hide

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -35,11 +35,11 @@ app.minio.secure=false
 app.dsl-parser.url=http://localhost:8080/extract
 
 # Spring Mail
-spring.mail.username=flickit93@gmail.com
+spring.mail.username=XXX
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.password=empv zuuu nlzn ljaa
+spring.mail.password=XXX
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
