FAC-229: Update minio properties

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -16,10 +16,8 @@ app.minio.api=http://127.0.0.1:9000
 app.minio.port=9000
 app.minio.access-key=minioadmin
 app.minio.access-secret=minioadmin
-app.minio.bucket-name=test
-app.minio.dsl-bucket-name=dsl
-app.minio.avatar-bucket-name=avatar
-#app.minio.object-name=assessmentKit/dsl/
+app.minio.bucket-names.dsl=dsl
+app.minio.bucket-names.avatar=avatar
 app.minio.secure=false
 
 # minio app
@@ -28,8 +26,8 @@ app.minio.secure=false
 #app.minio.port=80
 #app.minio.access-key=test
 #app.minio.access-secret=test
-#app.minio.bucket-name=media
-#app.minio.object-name=assessmentKit/dsl/
+#app.minio.bucket-names.dsl=dsl
+#app.minio.bucket-names.avatar=avatar
 #app.minio.secure=false
 
 
