FAC-231: port number changed

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -45,4 +45,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-logstash.url=a44a8c42-a460-440c-a113-ce405b4cee78.hsvc.ir:30394
+logstash.url=http://localhost:5044
