FAC-231: log.file.path property added to properties

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -34,3 +34,6 @@ app.minio.init-buckets=false
 
 # dsl parser
 app.dsl-parser.url=http://localhost:8080/extract
+
+# Logback
+log.file.path = logs/logback
